--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
 	<h1>Mon Repository</h1>
 	<p>Le cours sur Git & GitHub l'un de meilleurs que j'ai pu suivre jusqu'à présent</p>
+	<h2>Mes commit</h2>
+	<p>Mes commit avec mes premières ligne de commande</p>
 </body>
 </html>
